--- a/views/game.erb
+++ b/views/game.erb
@@ -1,13 +1,13 @@
 <center>
 
-    <p><h2>Greetings, <%= @player.name %></h2></p>
+    <p><h2>Hi, <%= session[:name] %></h2></p>
 
-    <p><h3>Choose your weapon</h3></p>
+    <p><h3>Choose a weapon!</h3></p>
 
-    <form action="/outcome" method="post">
-      <button name="Rock">Rock</button>
-      <button name="Paper">Paper</button>
-      <button name="Scissors">Scissors</button>
+    <form action="/result" method="post">
+      <button name="choice" value="rock">Rock</button>
+      <button name="choice" value="paper">Paper</button>
+      <button name="choice" value="scissors">Scissors</button>
     </form>
-    
+
 </center>
