--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<link href="/css/styles.css" rel="stylesheet" type="text/css" />
   <head>
     <title>Rock Paper Scissors!</title>
   </head>
